<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:id="@+id/customBackButtonll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#003366"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:onClick="onClick" >

        <ImageButton
            android:id="@+id/customBackButton"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/arrow"
            android:onClick="onClick" />

        <LinearLayout

            android:layout_width="345dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Credits"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/customBackButtonll"
        android:id="@+id/scrollView2"
        android:background="@android:color/background_light">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Institute of Human Origins \nArizona State University"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creditInfo"
                    android:layout_gravity="center"

                    android:textSize="16dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"
                    android:background="@drawable/line" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ASU Team—Version 2"
                    android:textStyle="bold"
                    android:textSize="18dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asuTeamInfo2"
                    android:layout_gravity="center"

                    android:textSize="16dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ASU Team—Version 1"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asuTeamInfo"
                    android:layout_gravity="center"

                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mobile App Team"
                    android:textStyle="bold"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileAppTeam"
                    android:layout_gravity="center"

                    android:textSize="16dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_gravity="center"
                    android:background="@drawable/line" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="@string/creditsLucy"
                    android:textSize="18dp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>
        </ScrollView>

</RelativeLayout>
